# Wrasul-LOL-Item-Build-Importer

./: .gitignore  AGENTS.md  README.md  STATUS.md  build_exe.ps1  pyproject.toml
docs/: item-set-research.md  safety.md
examples/: sample-item-sets.json
scripts/: gui_launcher.py
src/wrasul_lol_item_build_importer/: __init__.py  cli.py  gui.py  importer.py
tests/: test_gui_helpers.py  test_importer.py
