[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wrasul-lol-item-build-importer"
version = "0.2.0"
description = "Import Wrasul League of Legends item build JSON into local item set files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gragon" }]
keywords = ["league-of-legends", "item-sets", "riot-games", "wrasul"]

[project.scripts]
wrasul-lol-items = "wrasul_lol_item_build_importer.cli:main"
wrasul-lol-items-gui = "wrasul_lol_item_build_importer.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
